(2001/04/26 - ogawa) Fix for posterr
(2001/04/26 - sorfa) Fixed a SIGSEGV in linemode in find.c. Thanks to OGAWA Hirofumi
                     for pointing out the problem.
(2001/04/24 - slutz) STMTMAX increased to 10000
(2001/03/29 - broeker) Some further MSDOS/DJGPP patches. Close file 
	               'refsfound' before unlinking it. Avoid calling curses
 	               function nonl().  Replace fork/exec/wait machinery in 
	               exec.c by call to lib function spawnvp().
(2001/03/28 - broeker) Added flex-able version of scanner.l to the project, as
	               file src/fscanner.l. Changed configure.in and 
		       src/Makefile.am to use it if using 'flex'.
(2001/03/27 - broeker) Remove 'extern' declaration of yylval from
                       egrep.y:yylex(). It's not needed, as this is inside the
	               Yacc source itself, where the definition of yylval is
	               directly visible, and it causes problems by incompatible
	               redefinition on Alpha/DigitalUnix using yacc.
(2001/03/12 - broeker) Some minor changes for compiling cscope with DJGPP, the
	               MSDOG port of GCC. Mainly non-availability of some
		       Unix features like CLOSE_ON_EXEC for files, and SIGTSTP.
(2001/03/12 - broeker) Added 'b' flags and O_BINARY bits to all file-opening
                       calls for (potentially) binary data files, to allow 
		       cscope to work on DOS-style platforms. Moved vpopen()
		       and vpfopen() prototypes into vp.h.
(2001/03/12 - broeker) rename 'basename' to 'mybasename' --- avoid XPG4
                       name conflict
(2001/02/12 - duell) man page update for CSCOPE_* information
(2001/02/09 - duell & hull) Support for CSCOPE_EDITOR, CSCOPE_LINEFLAG and
                            CSCOPE_LINEFLAGS_AFTER_FILE
(2001/02/09 - petrs) Updated version number to 15.2b (for beta)
(2001/02/09 - chuck & wilfredo) Darwin support
(2001/01/24 - petrs) Replaced new style C comments, i.e. //