@@ -58,7 +58,7 @@
 #define DFLT_INCDIR "/usr/include"
 #endif
 
-static char const rcsid[] = "$Id: main.c,v 1.17 2001/03/27 14:09:19 broeker Exp $";
+static char const rcsid[] = "$Id: main.c,v 1.18 2001/03/29 15:03:55 broeker Exp $";
 
 /* note: these digraph character frequencies were calculated from possible 
    printable digraphs in the cross-reference for the C compiler */
@@ -749,10 +749,10 @@ initcompress(void)
 	
 	if (compress == YES) {
 		for (i = 0; i < 16; ++i) {
-			dicode1[(unsigned) (dichar1[i])] = i * 8 + 1;
+			dicode1[(unsigned char) (dichar1[i])] = i * 8 + 1;
 		}
 		for (i = 0; i < 8; ++i) {
-			dicode2[(unsigned) (dichar2[i])] = i + 1;
+			dicode2[(unsigned char) (dichar2[i])] = i + 1;
 		}
 	}
 }
